backend/k8s/news-service/postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: news-db
  namespace: news-domain
spec:
  serviceName: news-db
  replicas: 1
  selector:
    matchLabels:
      app: news-db
  template:
    metadata:
      labels:
        app: news-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: news-db-data
              mountPath: /var/lib/postgresql/data
            - name: init-scripts-volume
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-scripts-volume
          configMap:
            name: news-db-init
  volumeClaimTemplates:
    - metadata:
        name: news-db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: news-db
  namespace: news-domain
spec:
  clusterIP: None
  selector:
    app: news-db
  ports:
    - port: 5432
