backend/k8s/news-service/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: news-service
  namespace: news-domain
spec:
  entryPoints: [web]
  routes:
    - match: PathPrefix(`/v1/news`)
      kind: Rule
      middlewares:
        - name: jwt-forward-auth
          namespace: traefik
      services:
        - name: news-service
          port: 50051
          scheme: h2c
